@@ -1,5 +1,11 @@
+2004-03-08  Scott Dattalo  <scott@dattalo.com>
+	* lcd.h, lcd.cc, lcdengine.cc: Merged a portion of a patch from
+	Robert Pearce.
+	
+	
 2004-02-08  Scott Dattalo  <scott@dattalo.com>
 	* configure.in: changed revision to 0.2.1
+	* updated to the new gpsim API
 
 	
 2003-09-14  Scott Dattalo  <scott@dattalo.com>
